--- a/src/variables.scss
+++ b/src/variables.scss
@@ -50,7 +50,7 @@
   /* Page - default, layout */
   --page-background: var(--dark-grey);
   --page-maxwidth: 1200px;
-  --page-gutter-width: 25px;
+  --page-gutter-width: 20px;
 
   --section-padding-top: calc(20px + (50 - 20) * (100vw - 320px) / (1440 - 320));
   --section-padding-bottom: calc(40px + (100 - 40) * (100vw - 320px) / (1440 - 320));
